<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/space"
        android:layout_height="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="96dp"


        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bodypicklistbin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/userName"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/picklist"
                style="@style/normalTextStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/placeholde_picklistid"
               style="@style/normalTextStyle"
                app:layout_constraintStart_toEndOf="@+id/userName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/doc"
                style="@style/subTextStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <TextView
                android:id="@+id/userEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/placeholde_weight"
               style="@style/subTextDarkStyle"
                app:layout_constraintStart_toEndOf="@+id/userEmail"
                app:layout_constraintTop_toBottomOf="@+id/userNameText" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/source"
               style="@style/subTextStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userEmail" />

            <TextView
                android:id="@+id/statustxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/pending"
                style="@style/subTextDarkStyle"
                app:layout_constraintStart_toEndOf="@+id/userEmail"
                app:layout_constraintTop_toBottomOf="@+id/userEmailText" />

            <androidx.cardview.widget.CardView
                android:id="@+id/confirmpick"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="16dp"
                android:background="#4CAF50"
                android:backgroundTint="#4CAF50"
                android:visibility="gone"
                app:cardCornerRadius="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/recyclerVisibility"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/down_arrow" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>







        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recyclercontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/itemrecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/TextView5"
        android:layout_width="59dp"
        android:layout_height="16dp"
        android:text="     "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclercontainer" />


</androidx.constraintlayout.widget.ConstraintLayout>