<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.frags.AccountFrag">


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/userpage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bodypicklistbin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/name"
                        style="@style/normalTextStyle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/admin_s3f6"
                        style="@style/normalTextStyle"
                        app:layout_constraintStart_toEndOf="@+id/userName"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userEmail"
                        style="@style/normalTextStyle"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="E-mail "
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/userRole" />

                    <TextView
                        android:id="@+id/userEmailText"
                        style="@style/normalTextStyle"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="trailSet@mobillor.net"
                        app:layout_constraintStart_toEndOf="@+id/userEmail"
                        app:layout_constraintTop_toBottomOf="@+id/userRoleText" />

                    <TextView
                        android:id="@+id/userRole"
                        style="@style/normalTextStyle"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/role"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/userName" />

                    <TextView
                        android:id="@+id/userRoleText"
                        style="@style/normalTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/admin"

                        app:layout_constraintStart_toEndOf="@+id/userEmail"
                        app:layout_constraintTop_toBottomOf="@+id/userNameText" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/confirmpick"
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginEnd="48dp"
                        android:background="#4CAF50"
                        android:backgroundTint="#4CAF50"
                        android:visibility="gone"
                        app:cardCornerRadius="40dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutBtn"
        style="@style/standardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/log_out" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetpassBtn"
        style="@style/standardButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/logoutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/reset_password"
           />

</androidx.constraintlayout.widget.ConstraintLayout>