<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView2"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    app:cardCornerRadius="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="@dimen/_6sdp"
    android:layout_marginBottom="@dimen/_2sdp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bodypicklistbin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/userName"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/item_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userNameText"
                style="@style/normalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/loading"
                app:layout_constraintStart_toEndOf="@+id/userName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="SUID :"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <TextView
                android:id="@+id/userEmailText"
                style="@style/normalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/placeholde_weight"
                app:layout_constraintStart_toEndOf="@+id/userEmail"
                app:layout_constraintTop_toBottomOf="@+id/userNameText" />

            <androidx.cardview.widget.CardView
                android:id="@+id/confirmpick"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="16dp"
                android:background="#4CAF50"
                android:backgroundTint="#4CAF50"
                android:visibility="gone"
                app:cardCornerRadius="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
